              a simplex spanned by vertices u and v.  This is implemented in
              FaceNumbering<dim, 1> and is also accessible to Face<dim, 1>.
        Class Face<dim, dim-1>:
            - New routines lock(), unlock(), and isLocked().
        Class FacePair:
            - Added a spaceship operator (<=>) for comparisons.
        Class FacetPairing<dim>:
            - New routine hash(), which uses the tight encoding.
        Class FacetSpec<dim>:
            - New routine hash(), which uses the tight encoding.
            - Added a spaceship operator (<=>) for comparisons.  This has the
              effect of implementing all comparison operators, not just
              less-than (<) and less-than-or-equal (<=) as before.
        Enum FileFormat:
            - This is now a scoped enumeration, for better type safety.
              The old enum constants (e.g., REGINA_XML_GEN_3) have been
              renamed as scoped enum values (e.g., FileFormat::XmlGen3).
              The old names have been kept as deprecated compile-time constants
              in the regina:: namespace.
        Class FixedArray:
            - New class for stack-based fixed-size arrays whose sizes are not
              known until runtime.
        Class Flags<T>:
            - Updated to support both scoped and unscoped enumerations.
            - New operator bool(), which tests for a non-empty flag set.
            - Fixed an error in the 3- and 4-argument variants of ensureOne(),
              which would clear out all unrelated flags if none of the 3 or 4
              given flags were set.  This error was harmless in practice:
              the only effect was that, when enumerating fundamental normal
              surfaces with a non-trivial algorithm flag that did _not_ include
              an explicit Hilbert basis algorithm, the algorithm flag could
              have been ignored (thereby using the default vertex enumeration